--- a/naive_bayes.ipynb
+++ b/naive_bayes.ipynb
@@ -13,7 +13,7 @@
     "from tqdm import tqdm\n",
     "from collections import Counter\n",
     "from functools import reduce\n",
-    "from sklearn.metrics import balanced_accuracy_score\n",
+    "from sklearn.metrics import accuracy_score, f1_score\n",
     "stopwords = stopwords.words('english')"
    ]
   },
@@ -21,10 +21,84 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2022-01-13 17:47:27--  https://archive.ics.uci.edu/ml/machine-learning-databases/00228/smsspamcollection.zip\n",
+      "Resolving archive.ics.uci.edu (archive.ics.uci.edu)... 128.195.10.252\n",
+      "Connecting to archive.ics.uci.edu (archive.ics.uci.edu)|128.195.10.252|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 203415 (199K) [application/x-httpd-php]\n",
+      "Saving to: ‘smsspamcollection.zip.1’\n",
+      "\n",
+      "smsspamcollection.z 100%[===================>] 198.65K  84.7KB/s    in 2.3s    \n",
+      "\n",
+      "2022-01-13 17:47:31 (84.7 KB/s) - ‘smsspamcollection.zip.1’ saved [203415/203415]\n",
+      "\n",
+      "Archive:  smsspamcollection.zip\n",
+      "  inflating: SMSSpamCollection       \n",
+      "  inflating: readme                  \n"
+     ]
+    }
+   ],
    "source": [
-    "# !wget https://archive.ics.uci.edu/ml/machine-learning-databases/00228/smsspamcollection.zip\n",
-    "# !unzip smsspamcollection.zip "
+    "!wget https://archive.ics.uci.edu/ml/machine-learning-databases/00228/smsspamcollection.zip\n",
+    "!unzip smsspamcollection.zip "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Spam Classifier using Naive Bayes Algorithm\n",
+    "\n",
+    "In this notebook, we will train our model on Naive Bayes algorithm from scratch. \n",
+    "\n",
+    "$$\n",
+    "P(C \\mid D)=\\frac{P(D \\mid C) P(C)}{P(D)}\n",
+    "$$\n",
+    "where $C$ stands for class (spam/non-spam) and $D$ stands for document.\n",
+    "\n",
+    "1. $P(C)$ stands for prior probabilities\n",
+    "2. $P(D|C)$ stands for likelihoods\n",
+    "3. Since $P(D)$ is constant for different classes:\n",
+    "\n",
+    "$$\n",
+    "P(C \\mid D)\\propto P(D \\mid C) P(C)\n",
+    "$$\n",
+    "\n",
+    "- As far as the proportional constant is concerned, we normalize probabilities such that they sum to 1. \n",
+    "- We then compare these probabilities to assign labels. \n",
+    "- Also, modelling $P(D)$ is difficult."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Important Points:\n",
+    "1. So as we learn the joint distribution $P(C,D)$, and not exactly the posterior distribution $P(C|D)$, this is a generative model. \n",
+    "2. Naive Bayes assumes that the features/words are independent of each other given class i.e. features are **conditionally independent** of each other. \n",
+    "3. This means that the order of words in sentence doesn't matter. It considers a sentence as **bag of words** and doesn't account for context.\n",
+    "4. However, it is known to work well in general which is why it's quite popular. It can have high bias due to the above reason, but then also has low variance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Naive Bayes Algorithm\n",
+    "\n",
+    "The steps are as follows:\n",
+    "1. Preprocess the data\n",
+    "2. Split data (stratified if needed) into training and validation sets\n",
+    "3. On Training data:\n",
+    "    1. Calculate prior probabilities \n",
+    "    2. Calculate likelihoods\n",
+    "        1. Use Laplace Smoothing to avoid zero probabilities\n",
+    "4. Evaluate on validation data"
    ]
   },
   {
@@ -173,7 +247,18 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.87, 0.93)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def get_predictions(val_corpus):\n",
     "    sents = list(map(lambda x: x.split(' '), val_corpus[:,1]))\n",
@@ -183,35 +268,18 @@
     "        label_idx = probs.tolist().index(max(probs))\n",
     "        pred = labels[label_idx]\n",
     "        y_pred.append(pred)\n",
-    "\n",
     "    y_pred = np.array(y_pred)\n",
     "    return y_pred\n",
     "\n",
     "# predictions\n",
     "y_pred = get_predictions(val_corpus).tolist()\n",
+    "\n",
     "# ground truth\n",
     "y_val = val_corpus[:,0].tolist()  \n",
-    "assert len(y_val) == len(y_pred)    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "balanced_accuracy_score(y_val, y_pred)"
+    "assert len(y_val) == len(y_pred)    \n",
+    "\n",
+    "# metrics\n",
+    "accuracy_score(y_val, y_pred).round(2), f1_score(y_val, y_pred, pos_label='ham').round(2)"
    ]
   },
   {
