--- a/naive_bayes.ipynb
+++ b/naive_bayes.ipynb
@@ -26,16 +26,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2022-01-13 17:47:27--  https://archive.ics.uci.edu/ml/machine-learning-databases/00228/smsspamcollection.zip\n",
+      "--2022-01-13 17:57:45--  https://archive.ics.uci.edu/ml/machine-learning-databases/00228/smsspamcollection.zip\n",
       "Resolving archive.ics.uci.edu (archive.ics.uci.edu)... 128.195.10.252\n",
       "Connecting to archive.ics.uci.edu (archive.ics.uci.edu)|128.195.10.252|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 203415 (199K) [application/x-httpd-php]\n",
-      "Saving to: ‘smsspamcollection.zip.1’\n",
+      "Saving to: ‘smsspamcollection.zip’\n",
       "\n",
-      "smsspamcollection.z 100%[===================>] 198.65K  84.7KB/s    in 2.3s    \n",
+      "smsspamcollection.z 100%[===================>] 198.65K   253KB/s    in 0.8s    \n",
       "\n",
-      "2022-01-13 17:47:31 (84.7 KB/s) - ‘smsspamcollection.zip.1’ saved [203415/203415]\n",
+      "2022-01-13 17:57:47 (253 KB/s) - ‘smsspamcollection.zip’ saved [203415/203415]\n",
       "\n",
       "Archive:  smsspamcollection.zip\n",
       "  inflating: SMSSpamCollection       \n",
