--- a/singular_value_decomposition.ipynb
+++ b/singular_value_decomposition.ipynb
@@ -29,7 +29,7 @@
     "A=U \\Sigma V^{T}\n",
     "\\end{equation}\n",
     "\n",
-    "where $U(m \\times m)$ and $V(n \\times r)$ are orthogonal matrices, and $\\sum(m \\times r)$ is a matrix with only non-zero diagonal elements.\n",
+    "where $U(m \\times r)$ and $V(n \\times r)$ are orthogonal matrices, and $\\sum(r \\times r)$ is a matrix with only non-zero diagonal elements.\n",
     "\n",
     "$\\Sigma=\\left(\\sigma_{i j}\\right)$, where $\\sigma_{i i}=\\sigma_{i}$, for $i=1, \\ldots, r$ are the singular values of $A$ such that $\\sigma_{1} \\geq \\sigma_{2} \\geq \\ldots \\geq \\sigma_{r} \\geq 0$, and all non-diagonal entries of $\\sum$ are zero. \n",
     "\n",
